--- a/03-动态绑定属性/01-v-bind的基本使用.html
+++ b/03-动态绑定属性/01-v-bind的基本使用.html
@@ -17,6 +17,8 @@
     <a :href="baiduURL">百度一下</a>
 </div>
 
+<!--绑定对象的双引号里面，如果不是基本数据类型，并且没有加 ' ' 那么Vue就是作为一个变量去data中查找 -->
+
 <script src="../js/vue.js"></script>
 
 <script>
